package edu.fiuba.algo3.modelo;

public interface HitPoints {

    public void recibirDaño(int daño);
    public void regenerar();
    public int vida();
    public int escudo();

}
