package edu.fiuba.algo3.modelo;

public class Volcan extends Recurso{
    public Volcan(){
        super(5000);
    }
}
