@startuml

class NodoMineral {
-unidadesDeMineral
+extraer()
}

class Volcan{
-unidadesDeGas
+estraer()
}

abstract class Construccion {
-costo
-tiempoDeConstruccion: Int
-HitPoints hitPoints
+regenerarVida()
+vidaActual()
+escudoActual()
+recibirDaño()
}

class Juego {

+iniciarJuego()
+finalizarJuego()
}
abstract class Recursos {

+estraer()

}

abstract class ConstruccionZerg {

+regenerarVida()

}

class Criadero{

}

class Extractor{

}

class ReservaDeReproduccion{

}

class Guarida{

}

class Espiral{

}

ConstruccionZerg <|-- Criadero
ConstruccionZerg <|-- Extractor
ConstruccionZerg <|-- ReservaDeReproduccion
ConstruccionZerg <|-- Guarida
ConstruccionZerg <|-- Espiral

abstract class ConstruccionProtoss {
-escudo: Int
+regenerarEscudo()
}

class NexoMineral{

}

class Pilon{

}

class Asimilador{

}

class Acceso{

}

class PuertoEstelar{

}
interface hitPoints{

+recibirDaño()
+regenerar()
+vida()
+escudo()
}


ConstruccionProtoss <|-- NexoMineral
ConstruccionProtoss <|-- Pilon
ConstruccionProtoss <|-- Asimilador
ConstruccionProtoss <|-- Acceso
ConstruccionProtoss <|-- PuertoEstelar

Construccion -> hitPoints

Construccion <|-- ConstruccionProtoss
Construccion <|-- ConstruccionZerg
Juego o-- Construccion
Juego o-- Recursos
Recursos <|-- Volcan
Recursos <|-- NodoMineral

@enduml